# parse-internet-shortcut

./: .goreleaser.yml  Cargo.toml  PRD.md  README.md  ansible.yml  index.js  package.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: release.yml  repository-qa.yml
fixtures/: basic.json  basic.url  comments-and-spacing.json  comments-and-spacing.url  no-section.json  no-section.url
src/: lib.rs  main.rs  parser.rs
test/: integration.test.js
tests/: cli.rs  integration.rs
tests/fixtures/: basic.url  comments.url  malformed.url  stdin.url
