[package]
name = "parse-internet-shortcut"
version = "0.1.0"
edition = "2024"
description = "Parse Windows .url internet shortcut files."
license = "MIT"
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"

